fix: charts align

--- a/frappe/public/css/desk-rtl.css
+++ b/frappe/public/css/desk-rtl.css
@@ -123,7 +123,7 @@ ul.tree-children {
   text-align: right;
 }
 
-g.chart-legend {
+g.chart-legend .chart-container {
   direction: ltr !important;
 }
 
